# Node-AlloSystem

./: .gitignore  CMakeLists.txt  README.md  README.txt  binding.gyp  makefile  run  setup  test.js
cmake_modules/: FindAllocore.cmake  FindAlloutil.cmake  FindFFMPEG.cmake  FindFreeImage.cmake  FindSkia.cmake  FindTBB.cmake
include/: allosphere.h  boardcaster.h  broadcaster.h  canvas.h  common.h  graphics.h  stream.h
include/math/: basic.hpp  color.hpp  geometry.hpp  math.hpp  matrix.hpp  quaternion.hpp  vector.hpp
jni/: .gitignore  Test.java  iv_AllosphereTexture.cpp  makefile  makefile.darwin  makefile.linux
jni/iv/: AllosphereTexture.java
src/: allosphere.cpp  boardcaster.cpp  broadcaster.cpp  canvas_skia.cpp  glbind.cpp  glubind.cpp  glubind.h  graphics_common.h  graphics_ffmpeg.cpp  graphics_skia.cpp  ivnj_allosphere.cpp  ivnj_canvas.cpp  node_allosphere.cpp  node_boardcaster.cpp  node_broadcaster.cpp  node_graphics.cpp  node_graphics.h  node_sharedmemory.cpp  node_sharedmemory.h  stream.cpp
tests/: cube.js  geom.js  graphics.js  shm_test.js  shm_test_render.js  sphere.js  test.js  vertex_array.js  video.js
